[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/Manitaur/Jumper.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Manitaur/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://SpriteSheets/Enemies/Manitaur.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Manitaur/Idle.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Manitaur/Jump.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Manitaur/Falling.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 48 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 48.0

[node name="Jumper" type="KinematicBody2D" groups=[
"Enemy",
]]
position = Vector2( -8, 192 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Graphic" type="AnimatedSprite" parent="."]
position = Vector2( 8, 0 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
shape = SubResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="StateMachine/Idle"]

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = -48.0
margin_right = 64.0
margin_bottom = -34.0
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="View"]
visible = false
polygon = PoolVector2Array( -8, 8, -312, 120, -416, -104, -336, -168, 0, 0 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 1025
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 0.921875, 0.885414, 0.338501, 1 )
position = Vector2( 16, 16 )
shape = SubResource( 4 )
[connection signal="timeout" from="StateMachine/Idle/Timer" to="StateMachine/Idle" method="_on_Timer_timeout"]
[connection signal="body_entered" from="View" to="StateMachine/Idle" method="_on_View_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
